--- a/2-tours/setup/.gitignore
+++ b/2-tours/setup/.gitignore
@@ -21,4 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-../.vscode/
+
+#VSCode
+../.vscode/*
+../!.vscode/settings.json
+../!.vscode/tasks.json
+../!.vscode/launch.json
+../!.vscode/extensions.json
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
