Revert "improves usability by applying click event to the whole question container and changes mouse cursor to pointer"
This reverts commit 7f1a10a7e7239c4720ad4aea1e8c8d9f3fcb393b.

--- a/4-accordion/setup/package.json
+++ b/4-accordion/setup/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "netlify-cli": "^3.26.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
@@ -14,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
