--- a/01-birthday-reminder/setup/package.json
+++ b/01-birthday-reminder/setup/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "and": "0.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
